[bdist_wheel]
universal = 1

[metadata]
name = discovery-client
version = attr: discovery.__version__
author = Alexandre Menezes
author_email = alexandre.fmenezes@gmail.com
description = async consul client
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
url = "https://github.com/amenezes/discovery-client"
project_urls =
  Documentation = https://discovery-client.amenezes.net
  Code = https://github.com/amenezes/discovery-client
  Issue tracker = https://github.com/amenezes/discovery-client/issues
  Changes = https://github.com/amenezes/discovery-client/releases
classifiers =
  Development Status :: 5 - Production/Stable
  Framework :: AsyncIO
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Framework :: AsyncIO
  Intended Audience :: Developers
  Topic :: System :: Distributed Computing
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
keywords = ["asyncio", "consul", "python-consul", "python-consul2"]

[options]
packages = find:
install_requires =
  aiohttp >= 3.6.2
python_requires = >= 3.8

[options.extras_require]
docs = mkdocs-material
cli = click>=8.1.3; rich>=12.6.0
httpx = httpx>=0.16.1
httpxcli = httpx>=0.16.1; click>=8.1.3; rich>=12.6.0
all = mkdocs-material; aiohttp>=3.6.2; httpx>=0.16.1; click>=8.1.3; rich>=12.6.0

[options.entry_points]
console_scripts =
  discovery = discovery.__main__:cli

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py
          setup.py
          examples
ignore = E501 W503
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[mypy]
platform=linux
files = discovery
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True
warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

[tox:tox]
envlist = py{38,39,310,311}

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands = make ci
